--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.10.12",
+    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
+    "react-accordion": "^0.1.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.3",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
