--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.12",
-    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-accordion": "^0.1.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.2.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
